[tool.poetry]
name = "docer"
version = "0.1.0"
description = ""
authors = ["miroslavmatocha <matocham254@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
